--- a/styles/overrides/_buttons.overrides.scss
+++ b/styles/overrides/_buttons.overrides.scss
@@ -1,8 +1,8 @@
-// $btn-padding-y:               $input-btn-padding-y !default;
-// $btn-padding-x:               $input-btn-padding-x !default;
-// $btn-font-family:             $input-btn-font-family !default;
-// $btn-font-size:               $input-btn-font-size !default;
-// $btn-line-height:             $input-btn-line-height !default;
+$btn-padding-y: 6px;
+$btn-padding-x: 20px;
+$btn-font-family: "Roboto Condensed";
+$btn-font-size: 18px;
+$btn-line-height: 1.66857143;
 
 // $btn-padding-y-sm:            $input-btn-padding-y-sm !default;
 // $btn-padding-x-sm:            $input-btn-padding-x-sm !default;
@@ -16,7 +16,7 @@
 
 // $btn-border-width:            $input-btn-border-width !default;
 
-// $btn-font-weight:             $font-weight-normal !default;
+$btn-font-weight: bold;
 // $btn-box-shadow:              inset 0 1px 0 rgba($white, .15), 0 1px 1px rgba($black, .075) !default;
 // $btn-focus-width:             $input-btn-focus-width !default;
 // $btn-focus-box-shadow:        $input-btn-focus-box-shadow !default;
@@ -28,8 +28,15 @@
 // $btn-block-spacing-y:         .5rem !default;
 
 // // Allows for customizing button radius independently from global border radius
-// $btn-border-radius:           $border-radius !default;
-// $btn-border-radius-lg:        $border-radius-lg !default;
-// $btn-border-radius-sm:        $border-radius-sm !default;
+$btn-border-radius: 3px;
+$btn-border-radius-lg: 3px;
+$btn-border-radius-sm: 3px;
 
 // $btn-transition:              color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
+
+// CLASS BASED OVERRIDES
+// Custom Overrides
+.btn {
+  text-transform: uppercase;
+  letter-spacing: 0.07rem;
+}
