style(forms/typography): Adjust styles and doucment using storybook

--- a/styles/overrides/_buttons.overrides.scss
+++ b/styles/overrides/_buttons.overrides.scss
@@ -1,8 +1,8 @@
-$btn-padding-y: 6px;
-$btn-padding-x: 20px;
-$btn-font-family: "Roboto Condensed";
-$btn-font-size: 18px;
-$btn-line-height: 1.66857143;
+// $btn-padding-y:               $input-btn-padding-y !default;
+// $btn-padding-x:               $input-btn-padding-x !default;
+// $btn-font-family:             $input-btn-font-family !default;
+// $btn-font-size:               $input-btn-font-size !default;
+// $btn-line-height:             $input-btn-line-height !default;
 
 // $btn-padding-y-sm:            $input-btn-padding-y-sm !default;
 // $btn-padding-x-sm:            $input-btn-padding-x-sm !default;
