--- a/styles/overrides/_index.scss
+++ b/styles/overrides/_index.scss
@@ -1,4 +1,5 @@
 @import "./typography.overrides";
+@import "./buttonsAndFormsShared.overrides";
 @import "./buttons.overrides";
 @import "./colors.overrides";
 @import "./links.overrides";
