--- a/styles/custom/_navigation.custom.scss
+++ b/styles/custom/_navigation.custom.scss
@@ -1,5 +1,61 @@
 .navbar {
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
-  // box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+
+  &-dark {
+    background: #f9f8f5;
+  }
+}
+
+@include make-custom-style {
+  &-nav {
+    &-spacer {
+      &:after {
+        content: "\00A0";
+      }
+      &:before {
+        content: "\00A0\2022";
+        line-height: 40px;
+        color: $primary;
+      }
+    }
+
+    &-item {
+      &-social {
+        height: 40px;
+        width: 40px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        &:hover {
+          i {
+            color: #dabc74;
+          }
+        }
+
+        i {
+          font-size: 17px;
+          color: $secondary;
+        }
+      }
+    }
+  }
+
+  &-navbar {
+    &-top {
+      ul {
+        & > li {
+          a,
+          span {
+            font-size: 13px;
+            height: 40px;
+            line-height: 40px;
+            padding: 0 !important;
+          }
+        }
+      }
+    }
+  }
 }
