--- a/templates/base/base-template.html
+++ b/templates/base/base-template.html
@@ -3,111 +3,159 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Winterthur - Base Template</title>
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand navbar-dark justify-content-between winterthur-navbar-top">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="https://secure.winterthur.org/ecommerce/ItemList.aspx" target="_blank">Buy
-            Tickets</a>
-        </li>
-        <li class="nav-item winterthur-nav-spacer"></li>
-        <li class="nav-item">
-          <a class="nav-link" href="http://www.winterthur.org/visit/hours-directions/" target="_blank">Hours &
-            Directions</a>
-        </li>
-        <li class="nav-item winterthur-nav-spacer"></li>
-        <li class="nav-item">
-          <a class="nav-link" href="http://www.winterthur.org/visit/calendar/" target="_blank">Calendar</a>
-        <li class="nav-item winterthur-nav-spacer"></li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://inside.winterthur.org/give" target="_blank">Give</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item winterthur-nav-item-social">
-          <a href="https://www.facebook.com/winterthurmuse/?ref=nf" target="_blank">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-        </li>
-        <li class="nav-item winterthur-nav-item-social">
-          <a href="https://twitter.com/winterthurmuse" target="_blank">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </li>
-        <li class="nav-item winterthur-nav-item-social">
-          <a href="https://www.pinterest.com/winterthurmuse/" target="_blank">
-            <i class="fab fa-pinterest"></i>
-          </a>
-        </li>
-        <li class="nav-item winterthur-nav-item-social">
-          <a href="https://www.instagram.com/winterthurmuse/" target="_blank">
-            <i class="fab fa-instagram"></i>
-          </a>
-        </li>
-        <li class="nav-item winterthur-nav-item-social">
-          <a href="https://www.tripadvisor.com/Attraction_Review-g34060-d138300-Reviews-Winterthur_Museum_Garden_Library-Winterthur_Delaware.html"
-            target="_blank">
-            <i class="fab fa-tripadvisor"></i>
-          </a>
-        </li>
-        <li class="nav-item winterthur-nav-item-social">
-          <a href="http://museumblog.winterthur.org/" target="_blank">
-            <i class="fas fa-blog"></i>
-          </a>
-        </li>
-        <li class="nav-item winterthur-nav-item-social">
-          <a href="mailto:webmaster@winterthur.org" target="_blank">
-            <i class="fas fa-envelope"></i>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="#">
-        <img src="http://www.winterthur.org/wp-content/uploads/2018/01/web-logo300dpi.jpg"
-          style="height: auto; max-width: 250px" />
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="http://www.winterthur.org/visit/" target="_blank">Visit</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="http://www.winterthur.org/exhibitions-events/" target="_blank">Exhibitions &
-              Events</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="http://www.winterthur.org/education/" target="_blank">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="http://www.winterthur.org/collections/" target="_blank">Collections</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="http://www.winterthur.org/membership/" target="_blank">Membership</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="http://www.winterthur.org/support/" target="_blank">Support</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="http://www.winterthur.org/shop/" target="_blank">Shop</a>
-          </li>
-        </ul>
+  <header class="winterthur-header">
+    <div class="navbar-dark">
+      <div class="container">
+        <nav class="navbar navbar-expand-md winterthur-navbar-top">
+          <ul class="navbar-nav winterthur-navbar-top-left">
+            <li class="nav-item">
+              <a class="nav-link" href="https://secure.winterthur.org/ecommerce/ItemList.aspx" target="_blank">Buy
+                Tickets</a>
+            </li>
+            <li class="nav-item winterthur-nav-spacer"></li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://www.winterthur.org/visit/hours-directions/" target="_blank">Hours &
+                Directions</a>
+            </li>
+            <li class="nav-item winterthur-nav-spacer"></li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://www.winterthur.org/visit/calendar/" target="_blank">Calendar</a>
+            <li class="nav-item winterthur-nav-spacer"></li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://inside.winterthur.org/give" target="_blank">Give</a>
+            </li>
+          </ul>
+          <div class="collapse navbar-collapse justify-content-end">
+            <ul class="navbar-nav">
+              <li class="nav-item winterthur-nav-item-social" title="Facebook">
+                <a href="https://www.facebook.com/winterthurmuse/?ref=nf" target="_blank">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="nav-item winterthur-nav-item-social" title="Twitter">
+                <a href="https://twitter.com/winterthurmuse" target="_blank">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li class="nav-item winterthur-nav-item-social" title="Pinterest">
+                <a href="https://www.pinterest.com/winterthurmuse/" target="_blank">
+                  <i class="fab fa-pinterest"></i>
+                </a>
+              </li>
+              <li class="nav-item winterthur-nav-item-social" title="Instagram">
+                <a href="https://www.instagram.com/winterthurmuse/" target="_blank">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+              <li class="nav-item winterthur-nav-item-social" title="Trip Advisor">
+                <a href="https://www.tripadvisor.com/Attraction_Review-g34060-d138300-Reviews-Winterthur_Museum_Garden_Library-Winterthur_Delaware.html"
+                  target="_blank">
+                  <i class="fab fa-tripadvisor"></i>
+                </a>
+              </li>
+              <li class="nav-item winterthur-nav-item-social" title="Blog">
+                <a href="http://museumblog.winterthur.org/" target="_blank">
+                  <i class="fas fa-blog"></i>
+                </a>
+              </li>
+              <li class="nav-item winterthur-nav-item-social" title="Email">
+                <a href="mailto:webmaster@winterthur.org" target="_blank">
+                  <i class="fas fa-envelope"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
-    </nav>
-  </header>
-  <section>
+    </div>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">
+          <img src="http://www.winterthur.org/wp-content/uploads/2018/01/web-logo300dpi.jpg"
+            style="height: auto; max-width: 250px" />
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="http://www.winterthur.org/visit/" target="_blank">Visit</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://www.winterthur.org/exhibitions-events/" target="_blank">Exhibitions &
+                Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://www.winterthur.org/education/" target="_blank">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://www.winterthur.org/collections/" target="_blank">Collections</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://www.winterthur.org/membership/" target="_blank">Membership</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://www.winterthur.org/support/" target="_blank">Support</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://www.winterthur.org/shop/" target="_blank">Shop</a>
+            </li>
+          </ul>
+        </div>
 
+      </nav>
+    </div>
+  </header>
+  <section class="container">
+    <div class="row justify-content-lg-center">
+      <div class="col">
+        <div class="winterthur-content">
+          <div class="txt-area">
+            <!-- <h1>Title of section</h1> -->
+            <h1 class="text-primary display-4">Membership Renewal</h1>
+            <h2 class="text-muted">It's time to renew!</h2>
+            <!-- This is some <strong>description text</strong> that should typically expand upon the properties of the
+              section that the title and sub-title described above. This can be anything from a description to some
+              important points that the user would need to have context to further on down the page. -->
+            <p>Your Winterthur Membership lapsed at the end of August. To encourage you to reinstate it and experience
+              another year of Winterthur, we are offering <strong>$10 off*</strong> all membership levels. Renew now to
+              take advantage of this final savings offer.</p>
+            <p>Don't miss out on member discounts and priority reservations for events, lectures, and performances in
+              the next year!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-lg-center">
+      <div class="col">
+        <img class="img-fluid" src="https://inside.winterthur.org/image/winterthur-estate-pond.jpg"
+          style="width: 100%; max-height: 400px; object-fit: cover;" />
+        <p class="winterthur-typ-caption">Members have year-round, dawn-to-dusk access to miles of walking paths on the
+          1,000-acre estate!</p>
+      </div>
+    </div>
+    <div class="row justify-content-lg-center">
+      <div class="col">
+        <div class="winterthur-content">
+          <div class="txt-area">
+            <h1 class="text-primary">Membership Renewal Form</h1>
+            <p>Please take a moment to fill out the form below in order to keep taking advantage of all of the wonderful
+              amenities that Winterhur has to offer!</p>
+            <p><strong>Note: Discounted offer valid through October 31st, 2019</strong></p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
+
 </body>
 
 </html>
