style(typography): Adjust base typography styles to match client

--- a/templates/base/base-template.html
+++ b/templates/base/base-template.html
@@ -120,7 +120,7 @@
         <div class="winterthur-content">
           <div class="txt-area">
             <!-- <h1>Title of section</h1> -->
-            <h1 class="text-primary display-4">Membership Renewal</h1>
+            <h1 class="text-primary">Membership Renewal</h1>
             <h2 class="text-muted">It's time to renew!</h2>
             <!-- This is some <strong>description text</strong> that should typically expand upon the properties of the
               section that the title and sub-title described above. This can be anything from a description to some
@@ -146,7 +146,7 @@
       <div class="col">
         <div class="winterthur-content">
           <div class="txt-area">
-            <h1 class="text-primary">Membership Renewal Form</h1>
+            <h2 class="text-muted">Membership Renewal Form</h2>
             <p>Please take a moment to fill out the form below in order to keep taking advantage of all of the wonderful
               amenities that Winterhur has to offer!</p>
             <p><strong>Note: Discounted offer valid through October 31st, 2019</strong></p>
