--- a/styles/variable-overrides/_typography.overrides.scss
+++ b/styles/variable-overrides/_typography.overrides.scss
@@ -19,7 +19,7 @@ $font-family-sans-serif: "Roboto", sans-serif;
 // $line-height-base:            1.5 !default;
 
 $h1-font-size: 30px;
-// $h2-font-size:                $font-size-base * 2 !default;
+$h2-font-size: 24px;
 $h3-font-size: 16px;
 // $h4-font-size:                $font-size-base * 1.5 !default;
 // $h5-font-size:                $font-size-base * 1.25 !default;
