feat(footer): Add footer & custom styles to mock wordpress

--- a/styles/variable-overrides/_colors.overrides.scss
+++ b/styles/variable-overrides/_colors.overrides.scss
@@ -18,3 +18,5 @@ $secondary: #777;
 // $danger:        $red !default;
 // $light:         $gray-100 !default;
 $dark: $black;
+
+$winterthur-color-gray-1: #f2f2f2;
