--- a/styles/custom-styles/_content.scss
+++ b/styles/custom-styles/_content.scss
@@ -4,8 +4,7 @@
   }
 
   &-content {
-    margin: map-get($map: $spacers, $key: 5) 0;
-    padding: 0 map-get($map: $spacers, $key: 4);
+    @include make-section;
   }
 
   &-typ {
