--- a/templates/base/base-template.html
+++ b/templates/base/base-template.html
@@ -119,17 +119,19 @@
       <div class="col">
         <div class="winterthur-content">
           <div class="txt-area">
-            <!-- <h1>Title of section</h1> -->
-            <h1 class="text-primary">Membership Renewal</h1>
-            <h2 class="text-muted">It's time to renew!</h2>
+            <!-- Page title -->
+            <h1 class="text-primary">Page Title</h1>
+            <!-- Section title -->
+            <h2 class="text-muted">Section title</h2>
             <!-- This is some <strong>description text</strong> that should typically expand upon the properties of the
               section that the title and sub-title described above. This can be anything from a description to some
               important points that the user would need to have context to further on down the page. -->
-            <p>Your Winterthur Membership lapsed at the end of August. To encourage you to reinstate it and experience
-              another year of Winterthur, we are offering <strong>$10 off*</strong> all membership levels. Renew now to
-              take advantage of this final savings offer.</p>
-            <p>Don't miss out on member discounts and priority reservations for events, lectures, and performances in
-              the next year!</p>
+            <p>Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur.
+              Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas sed diam eget risus varius
+              blandit sit amet non magna. <span class="font-weight-bold">Aenean eu leo quam. Pellentesque ornare</span>
+              sem lacinia quam venenatis vestibulum.
+            </p>
+            <p>Donec id elit non mi porta gravida at eget metus.</p>
           </div>
         </div>
       </div>
@@ -138,24 +140,104 @@
       <div class="col">
         <img class="img-fluid" src="https://inside.winterthur.org/image/winterthur-estate-pond.jpg"
           style="width: 100%; max-height: 400px; object-fit: cover;" />
-        <p class="winterthur-typ-caption">Members have year-round, dawn-to-dusk access to miles of walking paths on the
-          1,000-acre estate!</p>
+        <p class="winterthur-typ-caption">Nulla vitae elit libero, a pharetra augue.</p>
       </div>
     </div>
     <div class="row justify-content-lg-center">
       <div class="col">
         <div class="winterthur-content">
+          <!-- Responsive text area -->
           <div class="txt-area">
+            <!-- Section title -->
             <h2 class="text-muted">Membership Renewal Form</h2>
-            <p>Please take a moment to fill out the form below in order to keep taking advantage of all of the wonderful
-              amenities that Winterhur has to offer!</p>
-            <p><strong>Note: Discounted offer valid through October 31st, 2019</strong></p>
+            <!-- Section Detail -->
+            <p>Etiam porta sem malesuada magna mollis euismod. Praesent commodo cursus magna, vel scelerisque nisl
+              consectetur et.</p>
+            <p><strong>Cras mattis consectetur purus sit amet fermentum.</strong></p>
+          </div>
+          <div
+            style="background-color: darkgray; height: 400px; display: flex; justify-content: center;align-items: center; color: #FFF;">
+            <p>DYNAMIC CONTENT GOES HERE</p>
           </div>
         </div>
       </div>
     </div>
   </section>
-
+  <footer class="winterthur-footer">
+    <div class="container">
+      <div class="row justify-content-lg-center">
+        <div class="col-md-4 col-sm-4 winterthur-footer-col">
+          <ul class="winterthur-footer-list">
+            <li>
+              <a target="_blank" href="http://www.winterthur.org/contacts/">Contact Us</a>
+            </li>
+            <li>
+              <a target="_blank" href="http://www.winterthur.org/visit/about-winterthur/">About Winterthur</a>
+            </li>
+            <li>
+              <a target="_blank" href="http://www.winterthur.org/employment/">Employment</a>
+            </li>
+            <li>
+              <a target="_blank" href="http://www.winterthur.org/volunteer/">Volunteer</a>
+            </li>
+            <li>
+              <a target="_blank" href="http://www.winterthur.org/press-room/">Press Room</a>
+            </li>
+            <li>
+              <a target="_blank" href="http://www.winterthur.org/suggestion-box/">Suggestion Box</a>
+            </li>
+          </ul>
+          </ul>
+        </div>
+        <div class="col-md-4 col-sm-4 winterthur-footer-col">
+          <ul class="winterthur-footer-list">
+            <li>
+              <p>
+                <span class="d-block">Winterthur Museum, Garden & Library</span>
+                <span class="d-block">5105 Kennett Pike</span>
+                <span class="d-blokc">Winterthur, Delaware, 19735</span>
+              </p>
+              <br />
+              <p>
+                <span class="d-block">800.448.3883</span>
+                <span class="d-block">302.888.4600</span>
+                <span class="d-block">302.888.4907 TTY</span>
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4 col-sm-4 winterthur-footer-col">
+          <ul class="winterthur-footer-list">
+            <li>
+              <a target="_blank" href="http://www.winterthur.org/newsletter-signup/">E-Newsletter Signup</a>
+            </li>
+            <li>
+              <a target="_blank" href="http://museumblog.winterthur.org/">Museum & Library Blog</a>
+            </li>
+            <li>
+              <a target="_blank" href="http://gardenblog.winterthur.org/">Garden Blog</a>
+            </li>
+            <li>
+              <a target="_blank" href="http://www.winterthur.org/visit/weddings/">Weddings</a>
+            </li>
+            <li>
+              <a target="_blank" href="http://www.winterthur.org/visit/corporate-entertaining/">Corporate
+                Entertaining</a>
+            </li>
+            <li>
+              <a target="_blank" href="http://www.winterthur.org/photo-credits/">Photo Credits</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <br />
+      <div class="row justify-content-center">
+        <div class="col">
+          <p class="text-primary">All rights reserved | &copy; Winterthur 2019</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
