--- a/src/styles/netcommunity/part-overrides/_membership.overrides.scss
+++ b/src/styles/netcommunity/part-overrides/_membership.overrides.scss
@@ -62,9 +62,17 @@
 }
 
 .BBMembershipFieldCaption {
-  /* System Defaults */
-  // width: 175px;
   width: auto;
+  padding: 0 !important;
+  display: block;
+  margin: map-get($map: $spacers, $key: 3) 0;
+
+  & > span {
+  }
+
+  label {
+    margin: 0;
+  }
 }
 
 .BBMembershipSummaryFieldCaption {
@@ -87,9 +95,6 @@
   &:nth-child(3),
   &:nth-child(4) {
     display: none;
-  }
-  & > span {
-    @include make-custom-radio;
   }
 }
 
@@ -157,6 +162,13 @@
 }
 
 .BBMembershipMessage {
+  display: block;
+  font-size: $font-size-sm;
+  font-weight: $font-weight-light;
+  padding: map-get($map: $spacers, $key: 4);
+  margin-top: map-get($map: $spacers, $key: 4);
+  background: $primary;
+  color: $white;
 }
 
 /***** End Membership Form styles *****/
