fix(select): Remove browser default select icons from

--- a/src/styles/netcommunity/part-overrides/_default.overrides.scss
+++ b/src/styles/netcommunity/part-overrides/_default.overrides.scss
@@ -364,7 +364,14 @@ td.wsNowrap {
 
   & > select {
     @extend .form-control;
+    @extend .custom-select;
     max-width: $input-max-width;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+
+    &::-ms-expand {
+      display: none;
+    }
   }
 
   .BBFieldCheckboxCaption {
