--- a/src/styles/netcommunity/part-overrides/_part.mixins.scss
+++ b/src/styles/netcommunity/part-overrides/_part.mixins.scss
@@ -32,3 +32,23 @@
   padding: 0 map-get($map: $spacers, $key: 3);
   display: block;
 }
+
+@mixin winterthur-make-custom-select {
+  @extend .form-control;
+  @extend .custom-select;
+  max-width: $input-max-width;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+
+  &::-ms-expand {
+    display: none;
+  }
+}
+
+@mixin winterthur-make-footer-section {
+  width: 100%;
+  display: block;
+  padding-top: map-get($map: $spacers, $key: 4);
+  border-top: 1px solid $winterthur-color-gray-1;
+  margin: map-get($map: $spacers, $key: 4) auto;
+}
