style: Restrict all container width to 75ch max

--- a/src/styles/bootstrap/custom-styles/_utils.scss
+++ b/src/styles/bootstrap/custom-styles/_utils.scss
@@ -1,4 +1,5 @@
 @mixin make-section {
-  margin: map-get($map: $spacers, $key: 5) 0;
+  margin: map-get($map: $spacers, $key: 5) auto;
   padding: 0 map-get($map: $spacers, $key: 4);
+  max-width: 75ch;
 }
