--- a/src/styles/netcommunity/part-overrides/_part.mixins.scss
+++ b/src/styles/netcommunity/part-overrides/_part.mixins.scss
@@ -27,7 +27,7 @@
 }
 
 @mixin make-form-container {
-  max-width: 70ch;
+  @extend .txt-area;
   margin: 0 auto;
   padding: 0 map-get($map: $spacers, $key: 3);
   display: block;
