feat(Alerts/Content): Add alerts & content

--- a/src/styles/bootstrap/custom-styles/_utils.scss
+++ b/src/styles/bootstrap/custom-styles/_utils.scss
@@ -1,3 +1,9 @@
+@mixin make-custom-style {
+  .winterthur {
+    @content;
+  }
+}
+
 @mixin make-section {
   margin: map-get($map: $spacers, $key: 5) auto;
   padding: 0 map-get($map: $spacers, $key: 4);
